# astryx-engine

./: .dockerignore  .gitignore  ASTRYX_OFFICE_HOURS_DESIGN_2026-04-02.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
app/: globals.css  layout.tsx  location-match-page.tsx  page.tsx  reading-analysis-panel.tsx  reading-forecast-panel.tsx  reading-page.tsx  reading-primary-panel.tsx  reading-start-page.tsx  reading-unavailable-page.tsx
app/api/reading/: route.ts
docs/superpowers/plans/: 2026-04-05-astryx-ai-reading-followups.md  2026-04-05-astryx-geonames-astrologer-flow.md  2026-04-05-astryx-midnight-astrology.md  2026-04-06-astryx-local-chart-three-pass-ai-implementation.md  2026-05-02-astryx-annual-career-finance-forecast-depth.md
docs/superpowers/specs/: 2026-04-05-astryx-ai-reading-followups-design.md  2026-04-05-astryx-midnight-astrology-design.md  2026-04-05-astryx-v1-flow-no-storage-design.md  (+2 more)
lib/: ai-reading.ts  astrology-bundle.ts  chart-payload.ts  reading-session.ts  reading.ts
lib/ai-prompts/: analysis.ts  explanation.ts  forecast.ts  shared.ts
services/: __init__.py
services/kerykeion_api/: Dockerfile  __init__.py  app.py  pyproject.toml
services/kerykeion_api/tests/: test_app.py
test/: ai-reading.test.ts  chart-payload.test.ts  globals-css.test.ts  home-page.test.tsx  location-match-page.test.tsx  reading-generating-page.test.tsx  reading-lib.test.ts  reading-page.test.tsx  reading-session.test.ts  reading-start-page.test.tsx  reading-unavailable-page.test.tsx
(+1 files in other folders)
